# staircase

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  STYLEGUIDE.md  build.sh  env.sh  run_demo.sh
src/: AppContext.hpp  GraphicsUtilities.cpp  GraphicsUtilities.hpp  OCCTUtilities.cpp  OCCTUtilities.hpp  StaircaseViewController.cpp  StaircaseViewController.hpp  StaircaseViewer.cpp  StaircaseViewer.hpp  ViewerContext.hpp  main.cpp  main.hpp  staircase.hpp
tools/: README.md  find_symbol.py  http_server_with_headers.py  occt_find_symbol
web/: index.html  staircase-module-post.js
